# ssdq

./: LICENSE  README.md  pyproject.toml  requirements.txt
content/: coop.yaml  credits.toml  enemies.yaml  formations.yaml  ships.yaml
content/levels/: level_01.yaml  level_02.yaml  level_03.yaml  level_04.yaml  level_05.yaml  level_06.yaml  level_07.yaml
ssdq/: main.py
ssdq/core/: __init__.py  clock.py  components.py  leaderboard.py  replay.py  rng.py  scene.py  types.py
ssdq/core/ai/: __init__.py  free_roam.py
ssdq/core/collision/: __init__.py  grid.py  shapes.py
ssdq/core/content/: __init__.py  loader.py  schema.py
ssdq/core/coop/: __init__.py  damage.py  lifecycle.py  options.py  scoring.py  session.py
ssdq/core/ecs/: __init__.py  system.py  world.py
ssdq/core/powerups/: __init__.py  drops.py  state.py
ssdq/core/waves/: __init__.py  fire.py  path.py  scheduler.py
ssdq/platform/audio/: __init__.py  bus.py  voice.py
ssdq/platform/input/: __init__.py  bindings.py  gamepad.py  keyboard.py  provider.py
ssdq/platform/render/: __init__.py  atlas.py  background.py  hud.py  particles.py  pause_overlay.py  renderer.py
ssdq/platform/window/: __init__.py  window.py
ssdq/scenes/: __init__.py  app_state.py  boot.py  docking.py  game_over.py  hud_state.py  hyperspace.py  initials.py  intro.py  leaderboard.py  level.py  level_complete.py  level_select.py  music_routing.py  settings.py  title.py  victory.py
